feat: rename CLI to xyborg-agent and add shell alias integration
Rename the CLI command from agent-starter-pack to xyborg-agent for better
branding of the XybOrg factory fork. Add shell alias configuration to ensure
the local modified template is always used instead of fetching from PyPI.

Changes:
- Renamed CLI entry point in pyproject.toml (line 119)
- Added shell alias to ~/.zshrc for seamless local template usage
- Updated README with detailed documentation of all file modifications
- Added setup instructions and explanation of why alias is needed
- Included summary table of all 3 modified files

The alias ensures 'xyborg-agent create' always uses the local fork at
/Users/democodex/code/xyborg/scripts/factory with factory deployment enabled.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,7 +116,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project.scripts]
-agent-starter-pack = "agent_starter_pack.cli.main:cli"
+xyborg-agent = "agent_starter_pack.cli.main:cli"
 
 [tool.hatch.build.targets.wheel]
 packages = ["agent_starter_pack", "llm.txt"]
