Add PYTHONPATH to Makefile run and playground targets
Sets PROJECT_ROOT in PYTHONPATH for adk commands to enable
config.secrets module loading from project root. This allows
agents to access Google OAuth tokens from Secret Manager.

Changes:
- Add new 'run' target for simple adk run with PYTHONPATH
- Update 'playground' target to include PYTHONPATH for adk web

--- a/agent_starter_pack/base_template/Makefile
+++ b/agent_starter_pack/base_template/Makefile
@@ -15,7 +15,12 @@ install:
 # Playground Targets
 # ==============================================================================
 
-# Launch local dev playground
+# Run agent locally via adk (with project root in PYTHONPATH for config.secrets)
+run:
+	@PROJECT_ROOT=$$(git rev-parse --show-toplevel 2>/dev/null || echo "../..") && \
+	PYTHONPATH=$$PROJECT_ROOT:$$PYTHONPATH uv run adk run {{cookiecutter.agent_directory}}
+
+# Launch local dev playground (with project root in PYTHONPATH for config.secrets)
 playground:{%- if cookiecutter.is_adk_live %} build-frontend-if-needed{%- endif %}
 {%- if cookiecutter.settings.get("commands", {}).get("override", {}).get("playground") %}
 {%- if cookiecutter.settings.get("commands", {}).get("override", {}).get("playground") is mapping %}
@@ -43,7 +48,8 @@ playground:{%- if cookiecutter.is_adk_live %} build-frontend-if-needed{%- endif 
 	uv run uvicorn {{cookiecutter.agent_directory}}.fast_api_app:app --host localhost --port 8000 --reload
 {%- endif %}
 {%- elif cookiecutter.is_adk %}
-	uv run adk web . --port 8501 --reload_agents
+	@PROJECT_ROOT=$$(git rev-parse --show-toplevel 2>/dev/null || echo "../..") && \
+	PYTHONPATH=$$PROJECT_ROOT:$$PYTHONPATH uv run adk web . --port 8501 --reload_agents
 {%- elif cookiecutter.is_a2a %}
 {%- if cookiecutter.deployment_target == 'cloud_run' %}
 	uv run uvicorn {{cookiecutter.agent_directory}}.fast_api_app:app --host localhost --port 8000 --reload &
@@ -56,7 +62,8 @@ playground:{%- if cookiecutter.is_adk_live %} build-frontend-if-needed{%- endif 
 	@echo "ℹ️  Note: Local playground uses ADK web interface (not A2A endpoints)."
 	@echo "    To test A2A protocol, deploy first with 'make deploy' then use 'make inspector'."
 	@echo ""
-	uv run adk web . --port 8501 --reload_agents
+	@PROJECT_ROOT=$$(git rev-parse --show-toplevel 2>/dev/null || echo "../..") && \
+	PYTHONPATH=$$PROJECT_ROOT:$$PYTHONPATH uv run adk web . --port 8501 --reload_agents
 {%- endif %}
 {%- endif %}
 {%- else %}
